# spatialchat

./: .env.example  .gitignore  README.md  SpatialChat_Tracing.ipynb  app.py  graph.py  langgraph.json  pyproject.toml  requirements.txt
agents/: state.py  sub_agents.py  supervisor.py
config/: settings.py
data/: catalog.json  loaders.py  metadata_store.py  vector_store.py
data/metadata/: mouse_brain_seqfish.json  mouse_brain_visium.json
docs/: ARCHITECTURE.md  EXTENDING.md
scripts/: build_vector_index.py  ingest_dataset.py
spatialchat/: _cli.py
tests/: test_graph.py  test_tools.py
tools/: base.py  dataset_tools.py  expression_tools.py  neighbor_tools.py  rag_tools.py  stats_tools.py
