[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialchat"
version = "0.2.0"
description = "Natural language interface for spatial transcriptomics analysis"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.2.0",
    "squidpy>=1.5.0",
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
run-app = "spatialchat._cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.5"]
fuzzy = ["rapidfuzz>=3.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["spatialchat"]
